--- a/client/package.json
+++ b/client/package.json
@@ -2,13 +2,12 @@
   "name": "corcorantwitter",
   "version": "1.0.0",
   "scripts": {
-    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
     "lite": "lite-server",
     "postinstall": "typings install",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "typings": "typings",
-    "test": "lite-server --open=unit-tests.html"
+    "test": "lite-server"
   },
   "license": "ISC",
   "dependencies": {
@@ -25,12 +24,9 @@
     "es6-shim": "^0.35.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "zone.js": "^0.6.12",
-    "angular2-in-memory-web-api": "0.0.7",
-    "bootstrap": "^3.3.6"
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
-    "concurrently": "^2.0.0",
     "jasmine-core": "2.4.1",
     "lite-server": "^2.2.0",
     "typescript": "^1.8.10",
