--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "twitterFull",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+   "node": "4.2.4"
+ },
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "setup": "npm install"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
