--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "start": "node ./bin/www",
-    "setup": "npm install"
+    "setup": "npm install && npm install client/"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
